--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Shiroko",
+  "name": "Averry",
   "version": "4.3.2",
   "type": "module",
   "main": "index.js",
@@ -16,10 +16,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Arlette-Xz/Shiroko-Bot.git"
+    "url": "git+https://github.com/LuisCheats/Averry-Bot.git"
   },
   "dependencies": {
-    "@whiskeysockets/baileys": "github:Melody-Xz/Delta",
+    "@whiskeysockets/baileys": "github:LuisCheats/Delta",
     "awesome-phonenumber": "^5.5.1",
     "boxen": "^7.1.1",
     "chalk": "^5.3.0",
